@@ -82,15 +82,16 @@ extern "C" {
 #define SFGAO_CANCOPY	DROPEFFECT_COPY
 #define SFGAO_CANMOVE	DROPEFFECT_MOVE
 #define SFGAO_CANLINK	DROPEFFECT_LINK
-#define SFGAO_CANRENAME	0x00000010L
-#define SFGAO_CANDELETE	0x00000020L
+#define SFGAO_CANRENAME		0x00000010L
+#define SFGAO_CANDELETE		0x00000020L
 #define SFGAO_HASPROPSHEET	0x00000040L
 #define SFGAO_DROPTARGET	0x00000100L
 #define SFGAO_CAPABILITYMASK	0x00000177L
+#define SFGAO_GHOSTED		0x00008000L
 #define SFGAO_LINK		0x00010000L
 #define SFGAO_SHARE		0x00020000L
 #define SFGAO_READONLY		0x00040000L
-#define SFGAO_GHOSTED		0x00080000L
+#define SFGAO_HIDDEN		0x00080000L
 #define SFGAO_DISPLAYATTRMASK	0x000F0000L
 #define SFGAO_FILESYSANCESTOR	0x10000000L
 #define SFGAO_FOLDER		0x20000000L
