@@ -1,3 +1,13 @@
+2003-08-25  Steven Edwards  <Steven_Ed4153@yahoo.com>
+
+	* include/ddk/ntifs.h: Change all C++ style comments to C.
+	* include/GL/gl.h: Ditto.
+
+2003-08-25  Martin Fuchs  <Martin-Fuchs@gmx.net>
+
+	* include/shlobj.h (SFGAO_GHOSTED): Correct.
+	(SFGAO_HIDDEN): Add define.
+
 2003-08-25  Filip Navara  <xnavara@volny.cz>
 
 	* include/commctrl.h (ILCF_*): Add defines.
